[tool.poetry]
name = "aiopriman"
version = "0.1.3"
description = ""
authors = ["darksidecat <bitalik371@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
mypy = "^0.812"
pytest = "^6.2.3"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
